        better way to set domain and host names
          (http://www.packetfence.org/mantis/view.php?id=487)
        added VLAN specific warnings to sanity_check
          (http://www.packetfence.org/mantis/view.php?id=491)
        added support for 3COM SS4500 switch
        person_delete and associated nodes
          (http://www.packetfence.org/mantis/view.php?id=493)

1.7.4
        undef operator in SNMP.pm
          (http://www.packetfence.org/mantis/view.php?id=382)
        replace javascript popup on relase page
          (http://www.packetfence.org/mantis/view.php?id=380)
        Bareword "Net::SNMP::OCTET_STRING" not allowed
          (http://www.packetfence.org/mantis/view.php?id=383)
        added script to check for duplication of secure MACs
        Cisco::Catalyst_3560 inheritance
          (http://www.packetfence.org/mantis/view.php?id=390)
        Support for Cisco Aironet 1250
          (http://www.packetfence.org/mantis/view.php?id=397)
        Removed unused loglevel from switches.conf
          (http://www.packetfence.org/mantis/view.php?id=392)
        documented alerting.wins_server in pf.conf.defaults
          (http://www.packetfence.org/mantis/view.php?id=398)
        configuration parameters for action_winpopup
          (http://www.packetfence.org/mantis/view.php?id=399)
        disabled service entry for snmptrapd
          (http://www.packetfence.org/mantis/view.php?id=401)
        removed deprecated generate_snort_rules sub
        redir.cgi trapping.registration cannot be onviolation
          (http://www.packetfence.org/mantis/view.php?id=404)
        skip registration
          (http://www.packetfence.org/mantis/view.php?id=408)
        reg scan and VLAN isolation
          (http://www.packetfence.org/mantis/view.php?id=409)
        recovery.pl in single thread mode
          (http://www.packetfence.org/mantis/view.php?id=411)
        recovery.pl should also validate locationlog entries